# RAG-learning

./: .gitignore  README.md  pyproject.toml
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
