[project]
name = "rag-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.0",
    "ipykernel>=6.31.0",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.86",
    "numpy>=2.0.2",
    "pymupdf>=1.26.5",
    "pypdf>=6.14.2",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.2",
    "textloader>=0.0.9",
]
